# journey-custom-component

./: .devcontainer.json  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  requirements.txt
.github/workflows/: constraints.txt  tests.yaml
config/: configuration.yaml
custom_components/journey/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  helpers.py  manifest.json  sensor.py
custom_components/journey/translations/: en.json
scripts/: setup
