[project]
name = "journey-custom-component"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "homeassistant>=2024.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "python-lsp-server>=1.12.0",
    "ruff>=0.9.2",
]

[tool.mypy]
python_version = 3.13
