[project]
name = "journey-custom-component"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "homeassistant>=2024.12.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.393",
    "ruff>=0.9.2",
    "ruff-lsp>=0.0.61",
]

[tool.mypy]
python_version = 3.13
